# tictactoe

./: .coveragerc  .gitignore  README.md  main.py  pyproject.toml  tasks.py
documentation/: implementation.md  project_specification.md  testing.md  user_guide.md
documentation/weekly_reports/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: backup.py  backup2.py  board.py  board_backup.py  game.py  game_ui.py  main.py  menu_ui.py  t.py  ui.py
src/game/: board.py
src/tests/: board_test.py  game_test.py
src/ui/: game_ui.py  menu_ui.py  tools.py
tests/: board_test.py
