[tool.poetry]
name = "ttt"
version = "0.1.0"
description = ""
authors = ["Natalie Johansson <mnrjohansson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.9.5"
autopep8 = "^1.5.7"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
